[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "types-cli"
description = "Run Types scripts with completion, without having to create a package, using Types CLI."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "KhulnaSoft DevOps", email = "info@khulnasoft.com"},
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License"
]

dynamic = ["version"]
dependencies = [
"types >=0.4.0,<=0.7.0",
"colorama >=0.4.3,<=0.5.0",
"shellingham >=1.3.2,<=1.4.0",
]

[project.urls]
Homepage = "https://github.com/khulnasoft/types-cli"
Documentation = "https://types.khulnasoft.com/types-cli/"

[project.scripts]
types = "types_cli.main:main"

[tool.hatch.version]
path = "types_cli/__init__.py"

[tool.isort]
profile = "black"
